--- a/src/pages/add-tag/index.wxss
+++ b/src/pages/add-tag/index.wxss
@@ -1,1 +1,20 @@
-/* src/pages/add-tag/index.wxss */
+.container {
+  padding: 28rpx 0;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+
+.added {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+
+button {
+  width: 400rpx !important;
+  margin-top: 60rpx;
+}
