--- a/src/pages/main/index.wxml
+++ b/src/pages/main/index.wxml
@@ -5,7 +5,7 @@
 
   <view class="tabs">
     <mp-tabs tabs="{{tabs}}" activeTab="{{activeTab}}" swiperClass="weui-tabs-swiper" bindtabclick="onTabClick"
-      tabBackgroundColor="none" activeClass="tab-bar-title__selected" swiperHeight="{{swiperHeight}}">
+      tabBackgroundColor="none" activeClass="tab-bar-title__selected" swipperHeight="{{swiperHeight}}">
 
       <block wx:for="{{tabs}}" wx:key="title" wx:for-index="tabIndex">
 
