--- a/src/pages/info/index.wxss
+++ b/src/pages/info/index.wxss
@@ -16,6 +16,8 @@
 
 .label {
   font-size: 18px;
+  font-weight: bold;
+  margin-top: 20rpx;
   margin-left: 10rpx;
   text-align: left;
   margin-bottom: 10rpx;
@@ -26,10 +28,12 @@
   width: 640rpx;
   height: 600rpx;
   background: white;
-  box-shadow: 0 0 20rpx 0 lightgray;
+  box-shadow: 0 10rpx 20rpx 0 lightgray;
   display: flex;
   flex-direction: column;
   border-radius: 40rpx;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 
@@ -38,13 +42,12 @@
 }
 
 .infomations {
-  width: 90%;
-  margin: auto;
+  width: 80%;
   height: 90rpx;
   display: inline-flex;
   align-items: center;
   justify-content: space-between;
-  margin-top: 40rpx;
+  margin-top: 60rpx;
 }
 
 .info {
@@ -52,15 +55,43 @@
 }
 
 .orders {
-  width: 60%;
-  display: inline-flex;
+  width: 100%;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
+  margin-top: 60rpx;
 }
 
 .order-label {
   font-weight: bolder;
   font-family: serif;
   width: 100%;
+}
+
+#user-orders {
+  display: inline-flex;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+.user-order:first-child {
+  width: 100% !important;
+}
+
+
+.more-order {
+  margin-top: 30rpx;
+  text-decoration: underline;
+}
+
+
+.more-messages {
+  text-decoration: underline;
+  position: relative;
+  left: 78%;
+  bottom: 70rpx;
 }
