--- a/src/components/test-com/index.wxss
+++ b/src/components/test-com/index.wxss
@@ -12,7 +12,7 @@
   margin: auto;
   border-radius: 40rpx;
   background-repeat: no-repeat;
-  box-shadow: 0 0 30rpx 0 lightgray;
+  box-shadow: 0 20rpx 30rpx 0 lightgray;
   background-size: cover;
   display: flex;
   flex-direction: column-reverse;
