--- a/src/pages/add-question/index.wxml
+++ b/src/pages/add-question/index.wxml
@@ -1,6 +1,6 @@
 <view class="container">
   <van-notify id="van-notify" />
-  <view class="weui-cells__title">问题类型<text style="color: red;">*</text>:</view>
+  <view class="weui-cells__title">试题类型<text style="color: red;">*</text>:</view>
   <view class="weui-cells weui-cells_after-title">
     <view class="weui-cell weui-cell_input">
       <view class="weui-cell__bd">
@@ -12,14 +12,14 @@
     </view>
   </view>
 
-  <view class="weui-cells__title">问题描述<text style="color: red;">*</text>:</view>
+  <view class="weui-cells__title">试题描述<text style="color: red;">*</text>:</view>
 
   <view class="question-description">
-    <editor-com placeholder="请输入问题详情" bind:updateDes="updateDes" editorText="{{description}}">
+    <editor-com placeholder="请输入试题详情" bind:updateDes="updateDes" editorText="{{description}}">
     </editor-com>
   </view>
 
-  <view class="weui-cells__title">问题选项<text style="color: red;">*</text>:</view>
+  <view class="weui-cells__title">试题选项<text style="color: red;">*</text>:</view>
 
   <view class="question-options">
     <view wx:for="{{options}}" wx:key="id" wx:for-item="option" wx:for-index="index">
@@ -34,7 +34,7 @@
     </view>
   </view>
 
-  <view class="weui-cells__title">问题答案<text style="color: red;">*</text>:</view>
+  <view class="weui-cells__title">试题答案<text style="color: red;">*</text>:</view>
   <view class="question-answers">
     <view wx:for="{{answers}}" wx:key="id" wx:for-item="answer" wx:for-index="index">
       <question-option-com optionContent="{{answer.content}}" optionIndex="{{answer.index}}"
@@ -49,7 +49,7 @@
   </view>
 
 
-  <view class="weui-cells__title">问题标签:</view>
+  <view class="weui-cells__title">试题标签:</view>
   <view class="question-tags">
 
     <search-com text="{{tagSearchText}}" bind:search="searchTag" inputShowed="{{false}}" active="{{true}}"
@@ -66,14 +66,14 @@
   </view>
 
   <view class="question-action">
-    <button type="primary" bindtap="validateForm">添加问题</button>
+    <button type="primary" bindtap="validateForm">添加试题</button>
   </view>
   <!-- add option dialog -->
   <view class="add-dialog" wx:if="{{showInput}}">
 
     <view class="first-line">
       <view class="tooltip">
-        添加问题{{addLabel}}
+        添加试题{{addLabel}}
       </view>
 
       <view class="close-input" bindtap="closeInput">
