--- a/src/pages/join-test/index.wxss
+++ b/src/pages/join-test/index.wxss
@@ -33,9 +33,6 @@ option-com {
   margin-right: 20rpx;
 }
 
-
-
-
 .bottom-navi {
   width: 100%;
   position: fixed;
@@ -49,14 +46,114 @@ option-com {
 
 .timer {
   font-size: 16pt;
-}
-
-
-.expand-fold-questions {
-  width: 100%;
+  width: 300rpx;
+  text-align: center;
 }
 
 .expand-fold-icon {
   height: 30rpx;
-  height: 100%;
+  width: 45rpx;
+  transform: rotate(180deg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='18.536' height='10.518' viewBox='0 0 18.536 10.518'%3E%3Cpath id='Icon_feather-chevron-left' data-name='Icon feather-chevron-left' d='M18.75,22.5,11.25,15l7.5-7.5' transform='translate(-5.732 20.518) rotate(-90)' fill='none' stroke='%23000' stroke-linecap='round' stroke-linejoin='round' stroke-width='2.5'/%3E%3C/svg%3E%0A");
+  animation-name: fold-icon-frames;
+  animation-timing-function: ease;
+  animation-duration: .2s;
+}
+
+.expand-icon {
+  animation-name: expand-icon-frames;
+  animation-timing-function: ease;
+  animation-duration: .5s;
+  transform: rotate(360deg);
+}
+
+@keyframes fold-icon-frames {
+  0% {
+    transform: rotate(0deg);
+  }
+  
+  100% {
+    transform: rotate(180deg);
+  }
+}
+
+@keyframes expand-icon-frames {
+  0% {
+    transform: rotate(180deg);
+  }
+  
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.expand-fold-questions {
+  width: 100%;
+  padding: 10rpx 0 0 0;
+  background: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  position: absolute;
+  bottom: -380rpx;
+  animation-name: fold-content-frames;
+  animation-duration: .2s;
+  animation-timing-function: ease;
+}
+
+
+.post-answer {
+  width: 300rpx;
+}
+
+van-button {
+  width: 300rpx;
+}
+
+.expand-content {
+  bottom: 120rpx;
+  animation-name: expand-content-frames;
+  animation-duration: .5s;
+  animation-timing-function: ease;
+}
+
+.expand-fold-content {
+  display: inline-flex;
+  flex-wrap: wrap;
+  height: 500rpx;
+  width: 90%;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+
+question-com {
+  margin-top: 10rpx;
+  margin-right: 20rpx;
+}
+
+@keyframes expand-content-frames {
+  0% {
+    bottom: -380rpx;
+    opacity: .1;
+  }
+
+  100% {
+    bottom: 120rpx;
+    opacity: 1;
+  }
+}
+
+@keyframes fold-content-frames {
+  0% {
+    bottom: 120rpx;
+    opacity: 1;
+  }
+
+  100% {
+    bottom: -380rpx;
+    opacity: .1;
+  }
 }
