--- a/src/components/tag-com/index.wxml
+++ b/src/components/tag-com/index.wxml
@@ -1,7 +1,7 @@
 <!--components/tag-com/tag-com.wxml-->
 <view class="tag-container">
   <view class="tag-back" wx:if="{{canDelete}}" hover-stay-time="100" hover-class="pressed">
-    <view class="delete-tag"></view>
+    <view class="delete-tag" bindtap="delete"></view>
   </view>
 
   <view class="tag-cover" style="background-image: url({{tag.cover}})" hover-class="pressed" hover-stay-time="100">
