--- a/src/components/tag-name-com/index.wxml
+++ b/src/components/tag-name-com/index.wxml
@@ -1,3 +1,3 @@
 <view class="tag-name-container">
-  <tag-com tag="{{tag}}" canDelete="{{true}}"></tag-com>
+  <tag-com tag="{{tag}}" canDelete="{{true}}" bind:deleteTag="deleteTag"></tag-com>
 </view>
