--- a/src/app.wxss
+++ b/src/app.wxss
@@ -23,6 +23,61 @@
   background: whitesmoke !important;
 }
 
+.common-tags-content {
+  margin: 10rpx 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-height: 400rpx;
+}
+
+.common-tags {
+  margin: 10rpx 0;
+  display: inline-flex;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.common-tag {
+  margin-right: 20rpx;
+}
+
+
+.show-search-tags {
+  background: white;
+  width: 600rpx;
+  height: 400rpx;
+  z-index: 1000;
+  position: absolute;
+  bottom: -528rpx;
+  opacity: .8;
+}
+
+.search-tag-results {
+  padding: 10rpx 0;
+}
+
+.question-tags-items {
+  display: inline-flex;
+  flex-wrap: wrap;
+}
+
+.tag-result {
+  width: 100%;
+  display: inline-flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.tag-cover {
+  width: 80rpx;
+  height: 80rpx;
+  background-size: cover;
+  background-repeat: no-repeat;
+  border-radius: 40rpx;
+}
+
 .tab-bar-title__selected {
   font-size: 20px;
   font-weight: normal !important;
