--- a/src/pages/complete-page/index.wxml
+++ b/src/pages/complete-page/index.wxml
@@ -1,4 +1,4 @@
 <view class="container">
 
-  <complete-com message="{{message}}"></complete-com>
+  <complete-com message="{{message}}" url="{{url}}" next="{{next}}"></complete-com>
 </view>
