modify add test question page

--- a/src/pages/add-test-question/index.wxml
+++ b/src/pages/add-test-question/index.wxml
@@ -19,6 +19,6 @@
   </view>
 
   <view class="complete-action">
-    <button type="primary">完成</button>
+    <van-button type="primary" block bindtap="checkResult">完成</van-button>
   </view>
 </view>
